--- a/scratch.html
+++ b/scratch.html
@@ -11,14 +11,16 @@ profile_tab_view.html
 sponsor_page.html
 student-Cofunder page (non tab).html
 
-
 TODO:
 
-coupon_pay.html
-coupon_purchase_page.html
-coupon_set_up.html
-coupon_share.html
-coupon_start.html
+coupon_purchase_page.html   (contribution select level)  /donors/1/contributions/1/level
+coupon_pay.html             (contribution payment)       /donors/1/contributions/1/payment
+coupon_share.html           (contribution share)         /donors/1/contributions/1/share
+
+coupon_start.html           (sponsorship start)
+coupon_set_up.html          (sponsorship coupon)
+                            (sponsorship share)
+
 design.html
 donate_coupon_contribute(start).html
 donate_coupon_pay.html
