--- a/scratch.html
+++ b/scratch.html
@@ -10,36 +10,43 @@ fueno-university.html
 profile_tab_view.html
 sponsor_page.html
 student-Cofunder page (non tab).html
+homepage.html
+homepage_with_pull-down.html (good pull-down!)
+
+coupon_purchase_page.html   (contribution select level)  /donors/1/contributions/1/level
+donate_coupon_contribute(start).html
+coupon_pay.html             (contribution payment)       /donors/1/contributions/1/payment
+donate_coupon_pay.html
+step_2_confirm_and_pay.html
+coupon_share.html           (contribution share)         /donors/1/contributions/1/share
+donate_coupon_share.html
+
+coupon_start.html           (sponsorship start)          /sponsors/1/sponsorships/1/start
+coupon_set_up.html          (sponsorship coupon)         /sponsors/1/sponsorships/1/coupon
+                            (sponsorship share)          /sponsors/1/sponsorships/1/share
+
+create a campaign
+    start.html                        /campaigners/1/campaigns/1/start
+    design.html                       /campaigners/1/campaigns/1/design
+    ignite.html                       /campaigners/1/campaigns/1/ignite
+    get_sponsored.html                /campaigners/1/campaigns/1/sponsor
+    get-funded.html                   /campaigners/1/campaigns/1/fund
+
+sponsor creates matching
+    matching_start.html               /sponsors/1/matchings/1/start
+    matching_choice.html              /sponsors/1/matchings/1/choose
+    matching_pay.html                 /sponsors/1/matchings/1/pay
+    matching_share.html               /sponsors/1/matchings/1/share
 
 TODO:
 
-coupon_purchase_page.html   (contribution select level)  /donors/1/contributions/1/level
-coupon_pay.html             (contribution payment)       /donors/1/contributions/1/payment
-coupon_share.html           (contribution share)         /donors/1/contributions/1/share
+user
+    edit            profile_tab_edit.html
+    show editable   profile_tab_edit_2.html
+    sponsor_tab_edit.html
+    student-Cofunder page (non tab).html
+    student-Cofunder_tab_edit.html
 
-coupon_start.html           (sponsorship start)
-coupon_set_up.html          (sponsorship coupon)
-                            (sponsorship share)
-
-design.html
-donate_coupon_contribute(start).html
-donate_coupon_pay.html
-donate_coupon_share.html
-get-funded.html
-get_sponsored.html
-homepage.html
-homepage_with_pull-down.html
-ignite.html
-matching_choice.html
-matching_pay.html
-matching_share.html
-matching_start.html
-profile_tab_edit.html
-profile_tab_edit_2.html
-search_for_a_cause.html
-search_for_a_student_Cofunder.html
-sponsor_tab_edit.html
-start.html
-step_2_confirm_and_pay.html
-student-Cofunder page (non tab).html
-student-Cofunder_tab_edit.html
+search
+    search_for_a_cause.html
+    search_for_a_student_Cofunder.html
