Linking up files

--- a/scratch.html
+++ b/scratch.html
@@ -1,52 +1,17 @@
-Completed:
-
-Cause -Campaign-Page-Brent-V2_rev.html
-cause-owner_edit.html
-cause-owner_view_tab.html
-core-values.html
-mission.html
-Donor_tab.html
-fueno-university.html
-profile_tab_view.html
-sponsor_page.html
-student-Cofunder page (non tab).html
-homepage.html
-homepage_with_pull-down.html (good pull-down!)
-
-coupon_purchase_page.html   (contribution select level)  /donors/1/contributions/1/level
-donate_coupon_contribute(start).html
-coupon_pay.html             (contribution payment)       /donors/1/contributions/1/payment
-donate_coupon_pay.html
-step_2_confirm_and_pay.html
-coupon_share.html           (contribution share)         /donors/1/contributions/1/share
-donate_coupon_share.html
-
-coupon_start.html           (sponsorship start)          /sponsors/1/sponsorships/1/start
-coupon_set_up.html          (sponsorship coupon)         /sponsors/1/sponsorships/1/coupon
-                            (sponsorship share)          /sponsors/1/sponsorships/1/share
-
-create a campaign
-    start.html                        /campaigners/1/campaigns/1/start
-    design.html                       /campaigners/1/campaigns/1/design
-    ignite.html                       /campaigners/1/campaigns/1/ignite
-    get_sponsored.html                /campaigners/1/campaigns/1/sponsor
-    get-funded.html                   /campaigners/1/campaigns/1/fund
-
-sponsor creates matching
-    matching_start.html               /sponsors/1/matchings/1/start
-    matching_choice.html              /sponsors/1/matchings/1/choose
-    matching_pay.html                 /sponsors/1/matchings/1/pay
-    matching_share.html               /sponsors/1/matchings/1/share
-
 TODO:
+    top menu to restore for logged in user
 
-user
-    edit            profile_tab_edit.html
-    show editable   profile_tab_edit_2.html
-    sponsor_tab_edit.html
-    student-Cofunder page (non tab).html
-    student-Cofunder_tab_edit.html
-
-search
-    search_for_a_cause.html
-    search_for_a_student_Cofunder.html
+<li class="pull-down">
+    <a href="#">Username <b class="caret"></b></a>
+    <ul>
+        <li><strong>My Account</strong></li>
+        <li><a href="/en/profiles/1">My Profile</a></li>
+        <li><a href="/en/profiles/1/edit">Edit Settings</a></li>
+        <li><a href="/en/donors">My Donations</a></li>
+        <li><a href="/cause_owners/1">My Causes</a></li>
+        <li><a href="sponsor_page.html">My Sponsorship</a></li>
+        <li><a href="/student_cofunders/1">Student CoFunder</a></li>
+        <li class="logout-link"><a href="homepage.html">Log Out</a></li>
+    </ul>
+</li>
+<li><a href="#">Me</a></li>
