--- a/public/static/get-funded.html
+++ b/public/static/get-funded.html
@@ -141,7 +141,7 @@
 
                         <!-- Box -->
                         <div class="box-container profile-edit">
-                            <h2>Student Co-Founder Information</h2>
+                            <h2>Student Co-Funder Information</h2>
                             <div class="box">
                                 <fieldset>
                                     <label for="name"><strong>Bank Account</strong></label>
@@ -170,7 +170,7 @@
                                 <div class="box-half">
                                     <p><a class="btn-green">Activated</a></p>
                                     <div class="clearfix"></div>
-                                    <p><strong><big>60%</big> going to Student Co-Founder</strong></p>
+                                    <p><strong><big>60%</big> going to Student Co-Funder</strong></p>
                                 </div>
                                 <div class="box-half">
                                     <a class="btn-red pull-right">Avaiting Cause Owner Activation</a>
