--- a/public/static/profile_tab_edit_2.html
+++ b/public/static/profile_tab_edit_2.html
@@ -93,7 +93,7 @@
                     <li class="active"><a href="#">Profile</a></li>
                     <li><a href="#">Donor</a></li>
                     <li><a href="#">Cause Owner</a></li>
-                    <li><a href="#">Student Co-Founder</a></li>
+                    <li><a href="#">Student Co-Funder</a></li>
                     <li><a href="#">Sponsor</a></li>
                 </ul>
             </div>
