--- a/public/static/search_for_a_cause.html
+++ b/public/static/search_for_a_cause.html
@@ -157,7 +157,7 @@
 
                                 <div class="box-half" id="team">
                                     <ul class="account-details">
-                                        <li><strong>Student Co-Founder:</strong></li>
+                                        <li><strong>Student Co-Funder:</strong></li>
                                         <li class="list-heading">
                                             <img alt="" src="assets/img/pictures/avatar-1.jpg">
                                             <strong>Warren Etheredge</strong><br>
