--- a/public/static/start.html
+++ b/public/static/start.html
@@ -116,7 +116,7 @@
                     <!-- Box -->
                     <div class="box-container profile-edit span12">
                         <br>
-                        <h2>Student Co-Founder Information</h2>
+                        <h2>Student Co-Funder Information</h2>
                         <div class="box">
                             <fieldset>
                                 <label for="name"><strong>Name</strong></label>
