--- a/public/static/student-Cofunder_tab_edit.html
+++ b/public/static/student-Cofunder_tab_edit.html
@@ -91,7 +91,7 @@
                     <li><a href="profile_tab_view.html">Profile</a></li>
                     <li><a href="Donor_tab_view.html">Donor</a></li>
                     <li><a href="cause-owner_view_tab.html">Cause Owner</a></li>
-                    <li class="active"><a href="student-Cofunder_tab_edit.html">Student Co-Founder</a></li>
+                    <li class="active"><a href="student-Cofunder_tab_edit.html">Student Co-Funder</a></li>
                     <li><a href="sponsor_tab_edit.html">Sponsor</a></li>
                 </ul>
             </div>
