--- a/public/static/Cause -Campaign-Page-Brent-V2_rev.html
+++ b/public/static/Cause -Campaign-Page-Brent-V2_rev.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="span3">
                 	<ul class="account-details">
-                        <li><strong>Student Co-Founder:</strong></li>
+                        <li><strong>Student Co-Funder:</strong></li>
                     	<li class="list-heading">
                             <img src="assets/img/pictures/college.jpg" alt="">
                             <img src="assets/img/pictures/a-small.jpg" alt="">
@@ -119,7 +119,7 @@
     	    <li><a href="#tab3" data-toggle="tab">Comments</a></li>
     	    <li><a href="#tab4" data-toggle="tab">Sponsors</a></li>
     	    <li><a href="#tab5" data-toggle="tab">Funders</a></li>
-    	    <li><a href="#tab6" data-toggle="tab">Co-Founder</a></li>
+    	    <li><a href="#tab6" data-toggle="tab">Co-Funder</a></li>
         </ul>
         
     	<div class="container">
@@ -168,7 +168,7 @@
                             <div class="box" id="team">
                                 <div class="inner">
                                     <ul class="account-details">
-                                        <li><strong>Student Co-Founder:</strong></li>
+                                        <li><strong>Student Co-Funder:</strong></li>
                                         <li class="list-heading">
                                             <img src="assets/img/pictures/avatar-1.jpg" alt="">
                                             <strong>Warren Etheredge</strong><br>
