--- a/public/static/cause-owner_view_tab.html
+++ b/public/static/cause-owner_view_tab.html
@@ -93,7 +93,7 @@
                     <li><a href="profile_tab_view.html">Profile</a></li>
                     <li><a href="Donor_tab_view.html">Donor</a></li>
                     <li class="active"><a href="cause-owner_view_tab.html">Cause Owner</a></li>
-                    <li><a href="student-Cofunder_tab_edit.html">Student Co-Founder</a></li>
+                    <li><a href="student-Cofunder_tab_edit.html">Student Co-Funder</a></li>
                     <li><a href="sponsor_tab_edit.html">Sponsor</a></li>
                 </ul>
             </div>
@@ -137,7 +137,7 @@
 
                         <div class="box-half" id="team">
                             <ul class="account-details">
-                                <li><strong>Student Co-Founder:</strong></li>
+                                <li><strong>Student Co-Funder:</strong></li>
                                 <li class="list-heading">
                                     <img alt="" src="assets/img/pictures/avatar-1.jpg">
                                     <strong>Warren Etheredge</strong><br>
@@ -204,7 +204,7 @@
 
                         <div class="box-half" id="team">
                             <ul class="account-details">
-                                <li><strong>Student Co-Founder:</strong></li>
+                                <li><strong>Student Co-Funder:</strong></li>
                                 <li class="list-heading">
                                     <img alt="" src="assets/img/pictures/avatar-1.jpg">
                                     <strong>Warren Etheredge</strong><br>
