--- a/public/static/donate_coupon_share.html
+++ b/public/static/donate_coupon_share.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="span3 offset1">
                     <ul class="account-details">
-                        <li><strong>Student Co-Founder:</strong></li>
+                        <li><strong>Student Co-Funder:</strong></li>
                         <li class="list-heading">
                             <img src="assets/img/pictures/college.jpg" alt="">
                             <img src="assets/img/pictures/a-small.jpg" alt="">
